# RAGTest

./: .coverage  .gitignore  ApiDockerfile  DocumentProcessorDockerfile  EmailProcessorDockerfile  EventProcessorDockerfile  LICENSE  Makefile  ProcessorDockerfile  README.rst  SlackProcessorDockerfile  TranscriptProcessorDockerfile  globals.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  unit-testing.yml
api/: apisupport.py  auth.py  credentials.json  employees.py  gsuite_retrieval.py  main.py  reference.py  script.py  slack_retrieval.py
api_fake/: auth.py  main.py
demo_script/: calendar.json  documents.json  email.json  slack.json
docker/: docker-compose-gcp.yml  docker-compose.yml
docker/kubernetes/: api-deployment.yaml  api-service.yaml  document-processor-deployment.yaml  event-processor-deployment.yaml  kafka1-deployment.yaml  kafka1-service.yaml  neo4j-deployment.yaml  neo4j-service.yaml  processor-deployment.yaml  reranker-transformers-deployment.yaml  t2v-transformers-deployment.yaml  transcript-processor-deployment.yaml  weaviate-deployment.yaml  weaviate-service.yaml  zoo1-deployment.yaml  zoo1-service.yaml
docker/nginx/: default.conf
docker/weaviate/: docker-compose.yml
jobs/dags/: definitions.py  refresh_slack_tokens.py
notebooks/: README.md  emails_kg.ipynb  emails_kg_customized.ipynb  emails_kg_query.ipynb  emails_kg_query2.ipynb  emails_kg_vectorized.ipynb  knowledge-graph.ipynb
notebooks/emails/: email1.txt  email10.txt  email2.txt  email4.txt  email5.txt  email6.txt  email7.txt  email8.txt  email9.txt
processor/: context.py  documents.py  emails.py  employees.py  events.py  main.py  pyproject.toml  slack.py  transcripts.py
prompts/: APISupport.create_briefings_for  APISupport.perform_ask  BriefingSupport.slack_context_for  GroqBriefingSummarizer.generate_hyde_content  Summarizer.email_summarizer  Summarizer.summarize
resources/: employees.csv  gmail_creds.json  slack_users.json
resources/api_stubs/: http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-22&end=2024-08-23&certainty=60  http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-23&end=2024-08-24&certainty=60  http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-26&end=2024-08-27&certainty=60  http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-27&end=2024-08-28&certainty=60  http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-28&end=2024-08-29&certainty=60  http-::127.0.0.1-5010:briefs?email=keith%40cognimate.ai&start=2024-08-29&end=2024-08-30&certainty=60
scripts/: README.md  emails_kg.py  emails_kg_customized.py  emails_kg_query.py  emails_kg_query2.py  emails_kg_vectorized.py
scripts/emails/: email3.txt
tests/: docker-compose.yml
tests/integration/jobs/: test_refresh_slack_tokens.py
tests/resources/: MS Office HTTPS Connectors.doc  MS Office HTTPS Connectors.docx  grouped_messages.pkl  sample_email.json  sample_thread.json  slack_response.json
tests/resources/events/: allday.ics  inperson.ics  invite1.ics  invite2.ics  sample1.ics  standup.ics
